[metadata]
name = bsv-sdk
author = Aaron
author_email = aaron@scrypt.io
description = BSV BLOCKCHAIN | Software Development Kit for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitcoin-sv/py-sdk
project_urls =
    Bug Tracker = https://github.com/bitcoin-sv/py-sdk/issues

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

keywords =
    bsv

[options]
python_requires = >=3.8
install_requires =
    typing-extensions
    pycryptodomex
tests_require =
    pytest
