[metadata]
name = bsv-sdk
author = Aaron
author_email = aaron@scrypt.io
description = BSV BLOCKCHAIN | Software Development Kit for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitcoin-sv/py-sdk
project_urls =
    Bug Tracker = https://github.com/bitcoin-sv/py-sdk/issues

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

keywords =
    bsv

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    pycryptodomex>=3.20.0
    coincurve>=20.0.0
    requests>=2.32.3
    aiohttp>=3.10.5

[options.extras_require]
test =
    pytest>=8.3.3
    pytest-asyncio>=0.24.0
    ecdsa>=0.19.0

[options.package_data]
* = hd/wordlist/*.txt
